--- a/src/main/resources/application-kubernetes.properties
+++ b/src/main/resources/application-kubernetes.properties
@@ -6,7 +6,7 @@ server.port=1179
 server.servlet.context-path=/api/kafka-producer-service
 
 #Spring profile
-#spring.profiles.active=${SPRING_ACTIVE_PROFILE:prod}
+#spring.profiles.active=${SPRING_ACTIVE_PROFILE:kubernetes}
 spring.cloud.kubernetes.discovery.all-namespaces=true
 
 #Disable Eureka
